; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-memintrinsics.c___asan_strncat.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-memintrinsics.c___asan_strncat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TYPE_STRW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @__asan_strncat(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i64 @strlen(i8* %8)
  %10 = load i64, i64* %6, align 8
  %11 = add i64 %9, %10
  %12 = add i64 %11, 1
  %13 = load i32, i32* @TYPE_STRW, align 4
  %14 = call i32 @kasan_check_range(i8* %7, i64 %12, i32 %13)
  %15 = load i8*, i8** %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i8* @__nosan_strncat(i8* %15, i8* %16, i64 %17)
  ret i8* %18
}

declare dso_local i32 @kasan_check_range(i8*, i64, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @__nosan_strncat(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
